--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "require": {
         "php": "^8.1",
+        "ext-pgsql": "*",
         "codeigniter4/framework": "^4.0",
         "dompdf/dompdf": "^3.1",
         "phpoffice/phpspreadsheet": "^4.4"
