security: remove sensitive files with credentials and PII data
Removed from tracking:
- public/migration_data.json (842 user passwords, PII)
- public/run-migration.php (Railway PostgreSQL credentials)
- import_database.php (JawsDB MySQL credentials)
- reset_database.php (JawsDB MySQL credentials)
- data-guru.json (teacher PII: NIK, NPWP, addresses)
- debug/test files from public directory
- other development scripts

Updated .gitignore to prevent re-commit

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,21 @@ debug.log
 *.db
 backup/
 
+# Sensitive data files - NEVER commit
+data-guru.json
+public/migration_data.json
+public/run-migration.php
+import_database.php
+reset_database.php
+migrate_direct.php
+switch_environment.php
+describe_habits.php
+setup_hosting_database.php
+users_for_railway.sql
+tmp_*.php
+*_migration*.json
+*_migration*.php
+
 # Deployment files
 ci4_infinityfree_deployment.zip
 deployment/*.zip
